[package]
name = "gasoline"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.6"
diesel = {version = "1.4.6", features = ["mysql", "r2d2"]}
dotenv = "0.15.0"
# r2d2 = "0.8.9"
serde = "1.0.125"